test/error/iface/err7.rzy
component
  Sub
    output
      funcA();
      funcB();
      
    implementation elementary
  end

  Err7
    implementation elementary
    
    component
      a : Sub;
      b : Sub;

    function a.funcA()
    end

    function a.funcB()
    end

  end

